# gia-agentic-short-v2

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  langgraph.json  pyproject.toml
.github/: copilot-instructions.md
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
docs/: 1f0e8c8a-9f59-6298-8007-d2c8909d4505.json  API.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  SPRINT_DATA_PIPELINE.md  STATE_FLOW_MAP.md  langgraph_architecture_spec.md  writing_style_guide.md
evaluation/: __init__.py  metrics.py  run_evaluation.py  test_queries.json
examples/: __init__.py  basic_workflow.py  data_analysis.py  hitl_workflow.py
public/: research_intake_form.html
scripts/: restore_state.py
sprints/: SPRINT_1.md  SPRINT_10.md  SPRINT_11.md  SPRINT_12.md  SPRINT_13.md  SPRINT_14.md  SPRINT_15.md  SPRINT_16.md  SPRINT_3.md  SPRINT_5.md  SPRINT_6.md  SPRINT_7.md  SPRINT_8.md  SPRINT_9.md
src/: __init__.py  main.py  server.py
src/agents/: __init__.py  base.py  data_analyst.py  research.py
src/cache/: __init__.py
src/citations/: __init__.py  formatter.py  manager.py  reference_list.py
src/config/: settings.py
src/data_sources/: __init__.py  base.py  finance.py
src/errors/: __init__.py  exceptions.py  handlers.py  policies.py  recovery.py
src/graphs/: __init__.py  debug.py  research_workflow.py  routers.py  streaming.py  subgraphs.py
src/memory/: __init__.py  checkpointer.py  store.py
src/nodes/: __init__.py  conceptual_synthesizer.py  data_acquisition.py  data_analyst.py  data_explorer.py  fallback.py  gap_identifier.py  intake.py  literature_reviewer.py  literature_synthesizer.py  planner.py  reviewer.py  writer.py
src/output/: __init__.py  latex.py
src/review/: __init__.py  criteria.py
src/state/: __init__.py  enums.py  models.py  schema.py
src/style/: __init__.py  academic_tone.py  banned_words.py  enforcer.py  hedging.py  journal_style.py  precision.py
studio/: graphs.py  langgraph.json
tests/: __init__.py  conftest.py
(+68 files in other folders)
